# project-soothsayer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROFILE.md  README.md  combine.bash  posthoc_suite.py  predict.sh  preflight.py  pyproject.toml  run_all_benches.bash  run_experiment_loop.bash  scrape.bash  soothsayer.md  update_explainer.py
arena_predictor/: CLAUDE.md  EXPERIMENT_LOOP.md  _walkforward_baselines.py  _walkforward_honest.py  analyze_sweep.py  baseline_comparison.py  baseline_comparison_lmarena.py  baseline_comparison_walkforward.py  calibration.py  column_imputer.py  frozen_alt_pairs.json  irt_features.py  joint_predict.py  predict.py  requirements.txt  run_alt_regressor_experiments.bash  run_cross_domain_experiments.bash  run_cycle10_experiments.bash  run_cycle1_experiments.bash  run_cycle2_experiments.bash  run_cycle2_resume.bash  run_cycle3_experiments.bash  run_cycle3_v2.bash  run_cycle4_experiments.bash  run_cycle5_experiments.bash  run_cycle6_experiments.bash  run_cycle7_experiments.bash  run_cycle8_experiments.bash  run_cycle9_experiments.bash  run_hybrid2_experiments.bash  run_hybrid_experiments.bash  run_irt_bridge_experiment.py  run_joint_experiments.bash  run_lmarena_style_experiments.bash  run_lobo_experiments.bash  run_lobo_full.bash  run_loo_sweep.bash  run_masking_experiment.bash  run_retune_sweep.bash  run_stage5.bash  (+10 more)
benchmark_combiner/: collect_benchmarks.sh  combine.py  correlations.py
core/: __init__.py  benchmark.py  cli.py  config.py  llm_client.py  super_bench_utils.py  trueskill_arena.py  utils.py
docs/: ARCHITECTURE.md  (+7 more)
(+129 files in other folders)
